<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <Button
            android:id="@+id/btnFavorito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rojo_favorito"
            android:text="@string/agregar_favoritos"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnCompartir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/verde_compartir"
            android:text="@string/compartir"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnVerReceta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/azul_colombia"
            android:text="@string/ver_receta"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
